--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ a:hover {
 body {
     margin: 0;
     display: flex;
-    place-items: center;
+    /* place-items: center; */
     min-width: 320px;
     min-height: 100vh;
 }
@@ -39,7 +39,7 @@ h1 {
     font-size: 3.2em;
     line-height: 1.1;
 }
-
+/* 
 button {
     border-radius: 8px;
     border: 1px solid transparent;
@@ -47,7 +47,7 @@ button {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    /* background-color: #1a1a1a; */
+    background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
 }
@@ -57,7 +57,7 @@ button:hover {
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
     :root {
